--- a/templates/users.xml
+++ b/templates/users.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0 encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <users>
 {% for item in data %}
     <user>
@@ -7,3 +7,5 @@
     </user>
 {% endfor %}
 </users>
+
+{# {{data|tojson}} #}
